# pinboard-cli

./: LICENSE  Makefile  README.md  pyproject.toml  todo.txt
api/: search.ipynb
api/v1/artifacts/: notes-ID.json  posts-all.json  posts-recent.json  posts-update.json  tags-get.json
api/v1/pinboard-api-v1/: collection.bru  posts-recent.bru  posts-update.bru  tags-get.bru  user-api_token.bru  user-secret.bru
api/v2/pinboard-api-v2/: bookmarks.bru  bruno.json  collection.bru
sandbox/pinboard-api-v1/: bruno.json  notes-ID.bru  notes-list.bru  notes-list.json  posts-all.bru  posts-update.bru
sandbox/pinboard-api-v2/: Hello.bru  bookmarks.bru  collection.bru
src/pbcli/: __init__.py  bookmark.py  con.py  config.py  main.py  notelib.py  pinboard.py
src/pinboard_cli/: columnize.py  con.py  config.py  notelib.py
