[project]
name = "pbcli"
version = "3.2.0"
description = "Access Pinboard Bookmark via Command Line Interface"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
]

[project.scripts]
pinboard-cli = "pbcli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
]
